wacc/test/golden/syntaxErr.basic.beginNoend
# begin missing closing end

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin skip


In test/wacc_examples/invalid/syntaxErr/basic/beginNoend.wacc (line 12, column 1):
unexpected end of input
expected ";" or end
unclosed main body
> begin skip
> ^
